--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
     "footerText": "&copy; 허석테크 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/dFm3zmNNa/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/Cr_QaehzL/",
     "classDetails": [
         {
             "name": "개(강아지)",
